<resources>
    <string name="app_name">CalciDemo</string>
    <string name="enter_first_number">Enter first number</string>
    <string name="enter_second_number">Enter second number</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="result">Result</string>
    <string name="clear">Clear</string>
</resources>